add case study and refactor

--- a/daily-ui.html
+++ b/daily-ui.html
@@ -51,18 +51,18 @@
     <div class="case-studies">
       <!-- back -->
       <a href="index.html#work">
-        <p class="back-chevron">back</i>
+        <p class="chevron">back</i>
       </a>
       <!--case study-->
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" ="fade-left">
             <a href="proper-knocks.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
+              <i class="fa fa-chevron-left fa-2x chevron"></i>
             </a>
             <h3>User Interface Design</h3>
             <a href="showfinder.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+              <i class="fa fa-chevron-right fa-2x chevron"></i>
             </a>
           </div>
           <div class="case-study-text">
