--- a/index.html
+++ b/index.html
@@ -48,25 +48,24 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-
     <!--header-->
-    <header id="top">
+    <header class="landing-page-header" id="top">
       <div class="header-overlay"></div>
       <div class="header-text">
         <h1>Brendan Hanna</h1>
-        <p>UX/UI Designer<p>
+        <p class="subtitle">UX Designer<p>
       </div>
     </header>
 
-    <section id="intro">
-      <p data-aos="fade-up" class="lead">I have a breadth of skills from print design to front end development in React JS, but web design and UX are my superpowers!<br><br>Open to freelance, contract or full time opportunities in Portland, OR or remote.</p>
+    <section id="intro" class="landing-page-section">
+      <p data-aos="fade-up" class="lead line-length">I have a breadth of skills from print design to front end development in React JS, but web design and UX are my superpowers!<br><br>Open to freelance, contract or full time opportunities in Portland, OR or remote.</p>
     </section>
 
-    <section id="skills">
-      <h3 data-aos="fade-up">Skills</h3>
+    <section id="skills" class="landing-page-section">
+      <h2 data-aos="fade-up">Skills</h2>
       <div data-aos="fade-up" class="skills-wrapper restrain-width">
         <div class="skill-wrapper">
-          <h4>Visual Design</h4>
+          <span>Visual Design</span>
           <ul>
             <li>UI Design</li>
             <li>Graphic Design</li>
@@ -74,7 +73,7 @@
           </ul>
         </div>
         <div class="skill-wrapper">
-          <h4>Web Development</h4>
+          <span>Web Development</span>
           <ul>
             <li>HTML5, CSS3 & Javascript</li>
             <li>Jquery, React JS & Angular 2</li>
@@ -82,7 +81,7 @@
           </ul>
         </div>
         <div class="skill-wrapper">
-          <h4>UX</h4>
+          <span>UX</span>
           <ul>
             <li>User Research</li>
             <li>Design Strategy</li>
@@ -95,15 +94,15 @@
 
     </section>
 
-    <section id="work" data-aos="fade-up">
-      <h3>WORK</h3>
+    <section id="work" class="landing-page-section" data-aos="fade-up">
+      <h2>WORK</h2>
       <div class="work-gallery">
-        <a href="showfinder.html" class="work-thumbnail" id="showfinder">
+        <a href="showfinder.html" class="work-thumbnail featured-thumbnail" id="showfinder">
           <div class="work-thumb-overlay">
           </div>
           <div class="work-thumb-info">
-            <h5>Show Finder</h5>
-            <p>Mobile UX/UI Design</p>
+            <h3>Show Finder</h3>
+            <p>Digital Product Design</p>
           </div>
         </a>
 
@@ -121,7 +120,7 @@
           </div>
           <div class="work-thumb-info">
             <h5>Non Profit Donator</h5>
-            <p>Invision Prototype</p>
+            <p>Low Fidelity Prototype</p>
           </div>
         </a>
         <a href="style-360.html" class="work-thumbnail" id="style360">
@@ -132,42 +131,26 @@
             <p>React JS Development</p>
           </div>
         </a>
-        <a href="proper-knocks.html" class="work-thumbnail" id="proper-knocks">
-          <div class="work-thumb-overlay">
-          </div>
-          <div class="work-thumb-info">
-            <h5>Proper Knocks</h5>
-            <p>Digital & Print Design</p>
-          </div>
-        </a>
-        <a href="daily-ui.html" class="work-thumbnail" id="daily-ui">
-          <div class="work-thumb-overlay">
-          </div>
-          <div class="work-thumb-info">
-            <h5>UI Sprints</h5>
-            <p>User Interface Design</p>
-          </div>
-        </a>
       </div>
     </section>
 
     <!--about section-->
-    <section id="about" data-aos="fade-up">
-      <h3>About</h3>
+    <section id="about" class="landing-page-section" data-aos="fade-up">
+      <h2>About</h2>
       <div class="about-content restrain-width">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>Since elementary school, I've always loved to draw.  As a teenager, I caught the skateboarding bug, which became my gateway drug into graffiti and late 90s underground rap music.</p>
-          <p>I spent ten years as a barista in Portland's specialty coffee industry while making music on the side, but I grew stagnant and knew I needed more creativity in my life.</p>
-          <p>After a series of adventures including a music business internship in LA and a five month stint in code school, I came full circle to my love of visual art, this time incorporating what I learned about development.</p>
-          <p>Now I design websites and apps, and when I'm not doing that, I'm generally still doodling, skateboarding, and making rap music! (check that out <a href="http://gepettomusic.com" target="blank">here</a>).</p>
+          <p class="line-length">Since elementary school, I've always loved to draw.  As a teenager, I caught the skateboarding bug, which became my gateway drug into graffiti and late 90s underground rap music.</p>
+          <p class="line-length">I spent ten years as a barista in Portland's specialty coffee industry while making music on the side, but I grew stagnant and knew I needed more creativity in my life.</p>
+          <p class="line-length">After a series of adventures including a music business internship in LA and a five month stint in code school, I came full circle to my love of visual art, this time incorporating what I learned about development.</p>
+          <p class="line-length">Now I design websites and apps, and when I'm not doing that, I'm generally still doodling, skateboarding, and making rap music! (check that out <a href="http://gepettomusic.com" target="blank">here</a>).</p>
         </div>
       </div>
     </section>
 
     <!-- contact section -->
-    <section class="light-bg" id="contact">
-      <h3>Contact</h3>
+    <section class="light-bg landing-page-section" id="contact">
+      <h2>Contact</h2>
 
       <form action="https://formspree.io/brendanhannadev@gmail.com" method="POST">
         <div class="input-field">
