--- a/proper-knocks.html
+++ b/proper-knocks.html
@@ -48,91 +48,78 @@
       </ul>
     </div>
 
-    <!--case study (initially hidden off screen) -->
-    <div class="case-studies">
-      <!-- back -->
-      <a href="index.html#work">
-        <p class="back-chevron">back</i>
-      </a>
-      <!--case study-->
-      <div class="case-study" id="case-study-1">
-        <div class="case-study-left">
-          <div class="case-study-heading" >
-            <a href="style-360.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-            </a>
+    <!--case study-->
+    <div class="case-study cs-flex-wrapper" id="case-study-1">
+      <div class="case-study-left">
+        <div class="case-study-heading">
+          <a href="index.html#work"><p class="chevron">back</p></a>
+          <div class="case-study-title" >
+            <a href="npo.html"><i class="fa fa-chevron-left fa-2x chevron"></i></a>
             <h3>Proper Knocks</h3>
-            <a href="daily-ui.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+            <a href="proper-knocks.html">
+              <i class="fa fa-chevron-right fa-2x chevron"></i>
             </a>
           </div>
-          <div class="case-study-text">
-            <div class="case-study-bullets">
-              <div class="case-study-bullets-left">
-                <ul>
-                  <li><strong>Role:</strong> Graphic Design</li>
-                </ul>
-              </div>
-              <div class="case-study-bullets-right">
-                <ul>
-                  <li><strong>Tech:</strong> Adobe Photoshop & Illustrator</li>
-                </ul>
-              </div>
+          <div class="case-study-bullets">
+            <div class="case-study-bullets-left">
+              <ul>
+                <li><strong>Role:</strong> Graphic Design</li>
+              </ul>
             </div>
-            <div class="case-study-paragraph">
-              <p>I created album artwork, show posters, and a t shirt design for my own hip hop group, <a href="https://properknocks.bandcamp.com/album/the-early-bird-project" target="_blank">The Early Bird Project</a>, to be released on local indie rap label <a href="https://properknocks.bandcamp.com/">Proper Knocks</a></p>
+            <div class="case-study-bullets-right">
+              <ul>
+                <li><strong>Tech:</strong> Adobe Photoshop & Illustrator</li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="case-study-right">
-          <!--content wrapper-->
-          <div class="case-study-content-wrapper">
-            <div class="scroll-downs">
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
-            <!--content mobile -->
-            <div class="case-study-content display-on-mobile">
-              <div class="screenshots">
-                <img src="images/proper-knocks/early-bird-cover.jpg" alt="early bird project album cover" class="screenshot">
+        <!-- title and prev/back chevrons -->
+          <div class="case-study-paragraph">
+            <p>Before </p>
+          </div>
 
-                <img src="images/proper-knocks/early-bird-tee.jpg" alt="early bird project t-shirt" class="screenshot">
-
-                <img src="images/proper-knocks/early-bird.jpg" alt="early bird project show poster" class="screenshot">
-
-                <img src="images/proper-knocks/sandwiched-poster.jpg" alt="proper knocks tour poster" class="screenshot">
-              </div>
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-            <!--content tablet and up -->
-            <div class="case-study-content display-on-tablet" >
-              <img src="images/proper-knocks/early-bird-cover.jpg" alt="early bird project album cover" class="screenshot">
-
-              <img src="images/proper-knocks/early-bird-tee.jpg" alt="early bird project t-shirt" class="screenshot">
-
-              <img src="images/proper-knocks/early-bird.jpg" alt="early bird project show poster" class="screenshot">
-
-              <img src="images/proper-knocks/sandwiched-poster.jpg" alt="proper knocks tour poster" class="screenshot">
-
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
+      </div><!--end case study left-->
+      <div class="case-study-right case-study-scrollbar-hider">
+        <!-- mouse scroller -->
+        <div class="scroll-downs">
+          <div class="mousey">
+            <div class="scroller"></div>
           </div>
         </div>
+        <!--content mobile -->
+        <div class="case-study-scrolling-screenshots display-on-mobile">
+          <div class="screenshots">
+            <img src="images/style-360/style360-1.png" alt="tangerine tablet layout" class="screenshot">
+            <img src="images/style-360/style360-2.png" alt="tangerine mood board and style guide" class="screenshot">
+            <img src="images/style-360/style360-3.png" alt="tangerine desktop layout with menu open" class="screenshot">
+            <img src="images/style-360/style360-4.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          </div>
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
+          </div>
+        </div>
+        <!--content tablet and up -->
+        <div class="case-study-scrolling-screenshots display-on-tablet" >
+          <img src="images/style-360/style360-1.png" alt="tangerine tablet layout" class="screenshot">
+          <img src="images/style-360/style360-2.png" alt="tangerine mood board and style guide" class="screenshot">
+          <img src="images/style-360/style360-3.png" alt="tangerine desktop layout with menu open" class="screenshot">
+          <img src="images/style-360/style360-4.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
+          </div>
+        </div>
+
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
           <p>top</p>
         </div>
         <!--case-study-right-->
       </div>
-      <!--case study-->
     </div>
+    <!--end case study and flex wrapper-->
+
 
     <!-- footer-->
     <footer class="light-bg">
