--- a/showfinder.html
+++ b/showfinder.html
@@ -48,88 +48,113 @@
       </ul>
     </div>
 
-    <!--case study (initially hidden off screen) -->
-    <div class="case-studies">
-      <!-- back -->
-      <a href="index.html#work">
-        <p class="back-chevron">back</i>
-      </a>
-      <!--case study-->
-      <div class="case-study" id="case-study-1">
-        <div class="case-study-left">
-          <div class="case-study-heading" >
-            <a href="daily-ui.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-            </a>
-            <h3>Show Finder</h3>
-            <a href="tangerine.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
-            </a>
-          </div>
-          <div class="case-study-text">
-            <div class="case-study-bullets">
-              <div class="case-study-bullets-left">
-                <ul>
-                  <li><strong>Role: </strong>UX/UI Design</li>
-                </ul>
-              </div>
-              <div class="case-study-bullets-right">
-                <ul>
-                  <li><strong>Tech: </strong> Adobe XD Prototype</li>
-                </ul>
-              </div>
-            </div>
-            <div class="case-study-paragraph">
-              <p>ShowFinder is a better way to find concerts and build community.  It pulls in shows from public music listings and your facebook events, and lets you upload your own shows, in-app.  There are deep filter options like sub-genre, neighborhood and price range, and you can keep tabs on your favorite bands by following them and getting notifications!</p>
-              <p>By creating this high-fidelity interactive prototype in Adobe XD, I'm able to continue iterating on the concept until it's totally dialed in before development.  (By the way, if you're an ios or android developer and you want to see this app become a reality, please reach out through the contact form!)</p>
-            </div>
-          </div>
-        </div>
-        <div class="case-study-right">
-          <!--content wrapper-->
-          <div class="case-study-content-wrapper">
-            <div class="scroll-downs">
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
-            <!--content mobile -->
-            <div class="case-study-content display-on-mobile">
-              <div class="screenshots">
-                <img src="images/showfinder/landing-mockup.png" alt="showfinder app landing screen" class="screenshot">
-
-                <img src="images/showfinder/feed-mockup.png" alt="showfinder app feed screen" class="screenshot">
-
-                <img src="images/showfinder/detail-mockup.png" alt="showfinder app show detail screen" class="screenshot">
-              </div>
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-            <!--content tablet and up -->
-            <div class="case-study-content display-on-tablet" >
-              <img src="images/showfinder/landing-mockup.png" alt="showfinder app landing screen" class="screenshot">
-
-              <img src="images/showfinder/feed-mockup.png" alt="showfinder app feed screen" class="screenshot">
-
-              <img src="images/showfinder/detail-mockup.png" alt="showfinder app show detail screen" class="screenshot">
-
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="to-top-tablet-and-down">
-          <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-          <p>top</p>
-        </div>
-        <!--case-study-right-->
+    <header class="case-study-heading">
+      <a href="index.html#work"><p class="chevron">back</p></a>
+      <div class="case-study-title constrict-width-on-tablet" >
+        <a href="style-360.html"><i class="fa fa-chevron-left fa-2x chevron"></i></a>
+        <h1>ShowFinder</h1>
+        <a href="tangerine.html">
+          <i class="fa fa-chevron-right fa-2x chevron"></i>
+        </a>
       </div>
-      <!--case study-->
-    </div>
+      <div class="case-study-bullets">
+        <div class="case-study-bullets-left">
+          <ul>
+            <li><strong>Role:</strong>UX Design</li>
+          </ul>
+        </div>
+        <div class="case-study-bullets-right">
+          <ul>
+            <li><strong>Tech:</strong>Adobe XD</li>
+          </ul>
+        </div>
+      </div>
+    </header>
+
+    <article class="case-study-2">
+      <section id="overview">
+        <div class="case-study-full-width-image">
+          <img src="./images/showfinder/hero.png" alt="header image">
+        </div>
+        <div class="case-study-paragraph">
+          <h2>Overview</h2>
+          <p>I designed a mobile app that allows users to find local concerts quicker and more easily so they can spend their time enjoying music and building community.</p>
+          <h2>The Problem</h2>
+          <p>Because underground concerts (think house shows, low-key bar shows) are not frequently not submitted to mainstream outlets to be listed, music fans looking to check out up-and-coming acts have to check various social media platforms, blogs, mailing lists, weekly papers and venue websites.  This is a huge time-drain, and every time they do it they have to start from scratch -- there’s no single platform they can use to keep track of everything they’re interested in.</p>
+          <h2>The Solution</h2>
+          <p>ShowFinder allows fans to find shows easily by combining listings from conventional music listings with Facebook events and shows published directly by bands in the app.  Users have deep search options such as location, sub-genre and price range to find exactly what they’re after, and they can save favorite bands and venues for easy access later.  This allows them to spend less time and energy looking for a show to go to, and more time enjoying music and building community!</p>
+        </div>
+      </section>
+      <section id="prototype">
+        <div class="resp-iframe-wrapper">
+          <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>  
+        </div>
+      </section>
+      <section class="light-bg process">
+        <h2>Process</h2>
+        <ul class="constrict-width-on-tablet">
+          <li>Research</li>
+          <li>Analysis & Synthesis</li>
+          <li>Ideation</li>
+          <li>Interaction Design</li>
+          <li>Visual Design</li>
+          <li>Prototyping</li>
+        </ul>
+      </section>
+      <section id="research">
+        <div class="case-study-paragraph">
+          <h2>Research</h2>
+          <p>Every product should be a marriage between the needs of the owner and the user, rooted in empathy.  To start out, I set out to find out who these parties are and what they need.</p><p>Treating myself as the stakeholder, I asked myself: What are my goals for this app?  What are my goals for creating tools for the music community in general?  What drives me, and what do I want to get, and provide to music lovers?</p><p>Next, I surveyed music lovers in my circles, asking them about their interests and behaviors in regard to music and community, how they currently find concerts, pain points, and what they’d like this app to provide.</p>
+        </div>
+        <div class="case-study-full-width-image">
+          <img src="./images/showfinder/research-deliverables-transparent.png" alt="research deliverables">
+        </div>
+      </section>
+      <section id="analysis-and-synthesis" class="case-study-paragraph">
+        <h2>Analysis & Synthesis</h2>
+        <p>I distilled the insights gained from my user surveys into a User Persona -- someone we can relate to, whose shoes we can walk in as we imagine the solution to their challenges.</p>
+        <img src="./images/showfinder/user-persona.png" alt="user persona" class="constrained-image">
+      </section>
+
+      <section id="ideation" class="case-study-paragraph">
+        <h2>Ideation</h2>
+        <p>Now that I knew who I was designing for and what they needed, I began brainstorming possible solutions for how to tangibly get them there.  Letting my creativity take the wheel, and viewing everything through the eyes of our user persona, I churned out ideas for features and scribbled countless possible user flows and wireframes.</p>
+      </section>
+      <section id="interaction-design">
+        <div class="case-study-paragraph">
+          <h2>Interaction Design</h2>
+          <p>From my piles of possibilities, the dots started to connect and I nailed down a map of the application, with routes the user would take to achieve the primary tasks.  From there, I knew which screens to design and I committed to a layout of each one for the first iteratio.</p>
+          <div class="case-study-full-width-image">
+            <h3>User Flows</h3>
+            <img src="./images/showfinder/user-flows.png" alt="user flows">
+            <br>
+            <h3>Wire Frames</h3>
+            <img src="./images/showfinder/wireframes.png" alt="wireframes">
+          </div>
+        </div>
+      </section>
+      <section id="visual-design">
+        <div class="case-study-paragraph">
+          <h2>Visual Design</h2>
+          <img src="./images/showfinder/final-screens.png" alt="final screens" class="constrained-image">
+          <img src="./images/showfinder/pattern-library.png" alt="pattern library" class="constrained-image">
+        </div>
+      </section>
+      <section id="user-testing" class="case-study-paragraph">
+        <h2>User Testing/Next Steps</h2>
+        <p>If I choose to continue developing ShowFinder, the next step will be toconduct user testing sessions in which I observe users attemping to perform different tasks.  I'll take that feedback and use it to improve the app in the next iteration.</p>
+        <p>If you're interested in seeing this app become a reality, please reach out via the contact form!  If there's enough interest, I'll see if I can put together a team to build it!</p>
+      </section>
+
+
+
+
+
+      <section class="to-top-tablet-and-down">
+        <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+        <p>top</p>
+      </section>
+    </article>
 
     <!-- footer-->
     <footer class="light-bg">
