--- a/style-360.html
+++ b/style-360.html
@@ -48,85 +48,79 @@
       </ul>
     </div>
 
-    <!--case study (initially hidden off screen) -->
-    <div class="case-studies">
-      <!-- back -->
-      <a href="index.html#work">
-        <p class="back-chevron">back</i>
-      </a>
-      <!--case study-->
-      <div class="case-study" id="case-study-1">
-        <div class="case-study-left">
-          <div class="case-study-heading" >
-            <a href="npo.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-            </a>
-            <h3>Style 360</h3>
-            <a href="proper-knocks.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+    <!--case study-->
+    <div class="case-study cs-flex-wrapper" id="case-study-1">
+      <div class="case-study-left">
+        <div class="case-study-heading">
+          <a href="index.html#work"><p class="chevron">back</p></a>
+          <div class="case-study-title" >
+            <a href="npo.html"><i class="fa fa-chevron-left fa-2x chevron"></i></a>
+            <h1>Style 360</h1>
+            <a href="showfinder.html">
+              <i class="fa fa-chevron-right fa-2x chevron"></i>
             </a>
           </div>
-          <div class="case-study-text">
-            <div class="case-study-bullets">
-              <div class="case-study-bullets-left">
-                <p><strong>Company:</strong> SightWorks</p>
-                <p><strong>Role:</strong> Front-End Web Development</p>
-              </div>
-              <div class="case-study-bullets-right">
-                <p><strong>Tech:</strong> React JS, SASS, LESS</p>
+          <div class="case-study-bullets">
+            <div class="case-study-bullets-left">
+              <ul>
+                <li><strong>Role:</strong> Front End Development</li>
+              </ul>
+            </div>
+            <div class="case-study-bullets-right">
+              <ul>
+                <li><strong>Tech:</strong> React JS</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- title and prev/back chevrons -->
+          <div class="case-study-paragraph">
+            <p>As an intern at SightWorks Digital Products, I was tasked with turning design mockups for a one page scrolling website into a UI built out of responsive React JS components.  In the process, I was also to create a style guide for future designers and developers</p>
+            <p>This process sparked the train of thought that is my main focus as a UX designer today: how can designers and developers collaborate more effectively -- not just by using design systems, but by applying empathy not just to the products we make but to the people we work with?</p>
+          </div>
 
-              </div>
-            </div>
-            <!--/bullets-->
-            <div class="case-study-paragraph">
-              <p>SightWorks needed a prototype of their new product, Style 360, built in React JS, a technology they hadn't used yet.  As their intern, I took PSD mockups and turned them into a pixel-perfect UI, which was then handed off to the senior dev to integrate it into their AWS-powered engine.</p>
-              <p>I took initiative on learning React JS and helping my team implement it, played a deciding role in discussions on tooling, and communicated effectively with my co-intern, project manager, the senior developer and the technical and creative directors.</p>
-            </div>
+      </div><!--end case study left-->
+      <div class="case-study-right case-study-scrollbar-hider">
+        <!-- mouse scroller -->
+        <div class="scroll-downs">
+          <div class="mousey">
+            <div class="scroller"></div>
           </div>
         </div>
-        <div class="case-study-right">
-          <!--content wrapper-->
-          <div class="case-study-content-wrapper">
-            <div class="scroll-downs">
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
-            <!--content mobile -->
-            <div class="case-study-content display-on-mobile">
-              <div class="screenshots">
-                <img src="images/style-360/style360-mobile-1.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-2.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-4.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-5.PNG" alt="screenshot of style360 project" class="screenshot">
-              </div>
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-            <!--content tablet and up -->
-            <div class="case-study-content display-on-tablet" >
-              <img src="images/style-360/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-4.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-5.PNG" alt="screenshot of style360 project" class="screenshot">
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
+        <!--content mobile -->
+        <div class="case-study-scrolling-screenshots display-on-mobile">
+          <div class="screenshots">
+            <img src="images/style-360/style360-1.png" alt="tangerine tablet layout" class="screenshot">
+            <img src="images/style-360/style360-2.png" alt="tangerine mood board and style guide" class="screenshot">
+            <img src="images/style-360/style360-3.png" alt="tangerine desktop layout with menu open" class="screenshot">
+            <img src="images/style-360/style360-4.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          </div>
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
           </div>
         </div>
+        <!--content tablet and up -->
+        <div class="case-study-scrolling-screenshots display-on-tablet" >
+          <img src="images/style-360/style360-1.png" alt="tangerine tablet layout" class="screenshot">
+          <img src="images/style-360/style360-2.png" alt="tangerine mood board and style guide" class="screenshot">
+          <img src="images/style-360/style360-3.png" alt="tangerine desktop layout with menu open" class="screenshot">
+          <img src="images/style-360/style360-4.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
+          </div>
+        </div>
+
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
           <p>top</p>
         </div>
         <!--case-study-right-->
       </div>
-      <!--case study-->
     </div>
+    <!--end case study and flex wrapper-->
+
 
     <!-- footer-->
     <footer class="light-bg">
