--- a/tangerine.html
+++ b/tangerine.html
@@ -48,87 +48,81 @@
       </ul>
     </div>
 
-    <!--case study (initially hidden off screen) -->
-    <div class="case-studies">
-      <!-- back -->
-      <a href="index.html#work">
-        <p class="back-chevron">back</i>
-      </a>
-      <!--case study-->
-      <div class="case-study" id="case-study-1">
-        <div class="case-study-left">
-          <div class="case-study-heading" >
-            <a href="showfinder.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-            </a>
-            <h3>Tangerine</h3>
+    <!--case study-->
+    <div class="case-study cs-flex-wrapper" id="case-study-1">
+      <div class="case-study-left">
+        <div class="case-study-heading">
+          <a href="index.html#work"><p class="chevron">back</p></a>
+          <div class="case-study-title" >
+            <a href="showfinder.html"><i class="fa fa-chevron-left fa-2x chevron"></i></a>
+            <h1>Tangerine</h1>
             <a href="npo.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+              <i class="fa fa-chevron-right fa-2x chevron"></i>
             </a>
           </div>
-          <div class="case-study-text">
-            <div class="case-study-bullets">
-              <div class="case-study-bullets-left">
-                <ul>
-                  <li><strong>Role:</strong>UI/UX Design</li>
-                </ul>
-              </div>
-              <div class="case-study-bullets-right">
-                <ul>
-                  <li><strong>Tech:</strong> Sketch</li>
-                </ul>
-              </div>
+          <div class="case-study-bullets">
+            <div class="case-study-bullets-left">
+              <ul>
+                <li><strong>Role:</strong>UI/UX Design</li>
+              </ul>
             </div>
-            <div class="case-study-paragraph">
-              <p>This one-day UI design sprint involved designing a responsive landing page (including menu in open and closed states) for a fictional brand.</p>
-              <p>I chose to do a modern online clothing boutique in the vein of Everlane, so I knew I'd be working with a lot of white space and making room for the product shots do the talking.</p>
-              <p>I experimented with different ways of placing elements in a minimal design to create interesting configurations of white space and create eyeflow.  I used strong visual hierarchy, the model's implied motion, and eye contact to influence eyeflow and user behavior.</p>
-              <p>The result is a design that's deceptively simple, letting the user be wowed by the product, feel the spacious calming vibe of the brand, be directed to the CTA, and be able to find all the information they're looking for easily.</p>
+            <div class="case-study-bullets-right">
+              <ul>
+                <li><strong>Tech:</strong> Sketch</li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="case-study-right">
-          <!--content wrapper-->
-          <div class="case-study-content-wrapper">
-            <div class="scroll-downs">
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
-            <!--content mobile -->
-            <div class="case-study-content display-on-mobile">
-              <div class="screenshots">
-                <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
-                <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
-                <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
-                <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
-              </div>
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-            <!--content tablet and up -->
-            <div class="case-study-content display-on-tablet" >
-              <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
-              <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
-              <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
-              <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
+        <!-- title and prev/back chevrons -->
+          <div class="case-study-paragraph">
+            <p>This one-day UI design sprint involved designing a responsive landing page (including menu in open and closed states) for a fictional brand.</p>
+            <p>I chose to do a modern online clothing boutique in the vein of Everlane, so I knew I'd be working with a lot of white space and making room for the product shots do the talking.</p>
+            <p>I experimented with different ways of placing elements in a minimal design to create interesting configurations of white space and create eyeflow.  I used strong visual hierarchy, the model's implied motion, and eye contact to influence eyeflow and user behavior.</p>
+            <p>The result is a design that's deceptively simple, letting the user be wowed by the product, feel the spacious calming vibe of the brand, be directed to the CTA, and be able to find all the information they're looking for easily.</p>
+          </div>
+
+      </div><!--end case study left-->
+      <div class="case-study-right case-study-scrollbar-hider">
+        <!-- mouse scroller -->
+        <div class="scroll-downs">
+          <div class="mousey">
+            <div class="scroller"></div>
           </div>
         </div>
+        <!--content mobile -->
+        <div class="case-study-scrolling-screenshots display-on-mobile">
+          <div class="screenshots">
+            <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
+            <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
+            <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
+            <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          </div>
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
+          </div>
+        </div>
+        <!--content tablet and up -->
+        <div class="case-study-scrolling-screenshots display-on-tablet" >
+          <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
+          <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
+          <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
+          <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          <div class="to-top-desktop">
+            <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+            <p>top</p>
+          </div>
+        </div>
+
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
           <p>top</p>
         </div>
         <!--case-study-right-->
       </div>
-      <!--case study-->
     </div>
+    <!--end case study and flex wrapper-->
+
 
     <!-- footer-->
     <footer class="light-bg">
