--- a/npo.html
+++ b/npo.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!--responsive meta tag-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brendan Hanna</title>
-    <!--materialize css cdn-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- animate on scroll -->
-    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <!--my compiled scss-->
-    <link rel="stylesheet" href="styles/styles.css">
-    <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
-    <!-- font awesome icons -->
-    <script src="https://use.fontawesome.com/8606092cd1.js"></script>
-    <!--jquery scripts-->
-    <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-    <!--my scripts-->
-    <script type="text/javascript" src="js/scripts.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <!--responsive meta tag-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brendan Hanna</title>
+  <!--materialize css cdn-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!-- animate on scroll -->
+  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+  <!--my compiled scss-->
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+  <!-- font awesome icons -->
+  <script src="https://use.fontawesome.com/8606092cd1.js"></script>
+  <!--jquery scripts-->
+  <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+  <!--my scripts-->
+  <script type="text/javascript" src="js/scripts.js"></script>
+</head>
   <body>
     <!--fade-in page, inline script needed to avoid flickering.  adds opacity: 0 class to body, which is removed by first line of JS in scripts.js-->
     <script>document.body.className += ' fade-out';</script>
@@ -48,77 +48,54 @@
       </ul>
     </div>
 
-    <!--case study (initially hidden off screen) -->
-    <div class="case-studies">
-      <!-- back -->
-      <a href="index.html#work">
-        <p class="back-chevron">back</i>
-      </a>
-      <!--case study-->
-      <div class="case-study" id="case-study-1">
-        <div class="case-study-left">
-          <div class="case-study-heading">
-            <a href="tangerine.html">
-              <i class="fa fa-chevron-left fa-2x back-chevron"></i>
-            </a>
-            <h3>Non Profit Donator</h3>
+    <!--case study-->
+    <div class="case-study cs-flex-wrapper" id="case-study-1">
+      <div class="case-study-left">
+        <div class="case-study-heading">
+          <a href="index.html#work"><p class="chevron">back</p></a>
+          <div class="case-study-title" >
+            <a href="tangerine.html"><i class="fa fa-chevron-left fa-2x chevron"></i></a>
+            <h1>Non Profit Donator</h1>
             <a href="style-360.html">
-              <i class="fa fa-chevron-right fa-2x back-chevron"></i>
+              <i class="fa fa-chevron-right fa-2x chevron"></i>
             </a>
           </div>
-          <div class="case-study-text">
-            <div class="case-study-bullets">
-              <div class="case-study-bullets-left">
-                <p><strong>Role:</strong> UX design</p>
-                <p><strong>Tech:</strong> Sketch 3, Invision</p>
-              </div>
-              <div class="case-study-bullets-right">
-                <p>
-                  <strong>Live Link:</strong>
-                  <a href="https://invis.io/RED46CZWP" target="_blank">Invision Prototype</a>
-                </p>
-              </div>
+          <div class="case-study-bullets">
+            <div class="case-study-bullets-left">
+              <ul>
+                <li><strong>Role:</strong> Digital Product Design</li>
+              </ul>
             </div>
-            <!--/bullets-->
-            <div class="case-study-paragraph">
-              <p>This is a clickable prototype of a mobile app for donating to Non Profit Organizations, along with a social media micro-platform where you see updates from organizations and users of your choice.</p>
-              <p>This ability for users to simplify and personalize their engagement, making them more likely to engage and donate!</p>
-              <!-- <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p> -->
+            <div class="case-study-bullets-right">
+              <ul>
+                <li><strong>Tech:</strong> Sketch & Invision</li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="case-study-right">
-          <!--content wrapper-->
-          <div class="case-study-content-wrapper" >
-            <div class="scroll-downs">
-              <div class="mousey">
-                <div class="scroller"></div>
-              </div>
-            </div>
-            <!--'content' (screenshots) -->
-            <div class="case-study-content display-on-mobile">
-              <img src="images/npo/npo-mobile-4.png" alt="screenshot of non profit donator project" class="first screenshot">
-              <img src="images/npo/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-            <div class="case-study-content display-on-tablet">
-              <img src="images/npo/npo-1.png" alt="images/npo/npo-1.png" class="first screenshot">
-              <img src="images/npo/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
-              <img src="images/npo/npo-3.png" alt="images/npo/npo-3.png" class="screenshot">
-              <div class="to-top-desktop">
-                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
-                <p>top</p>
-              </div>
-            </div>
-
-            <!--content-->
+        <!-- title and prev/back chevrons -->
+          <div class="case-study-paragraph">
+            <p>As a student at Epicodus, this low fidelity interactive Invision Prototype was my first forray into digital product design.</p>
+            <p></p>
           </div>
-          <!--content wrapper-->
+
+      </div><!--end case study left-->
+      <div class="case-study-right case-study-scrollbar-hider">
+        <!-- mouse scroller -->
+        <div class="scroll-downs">
+          <div class="mousey">
+            <div class="scroller"></div>
+          </div>
+        </div>
+        <!--content mobile -->
+        <div class="case-study-scrolling-screenshots">
+          <div class="resp-iframe-wrapper">
+            <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
+            <!-- <img src="images/npo/npo-1.png" alt="tangerine tablet layout" class="screenshot">
+            <img src="images/npo/npo-3.png" alt="tangerine mood board and style guide" class="screenshot">
+            <img src="images/npo/npo-4.png" alt="tangerine desktop layout with menu open" class="screenshot">
+            <img src="images/npo/npo-donator.png" alt="tangerine tablet layout with menu open" class="screenshot"> -->
+          </div>
         </div>
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
@@ -126,8 +103,9 @@
         </div>
         <!--case-study-right-->
       </div>
-      <!--case study-->
     </div>
+    <!--end case study and flex wrapper-->
+
 
     <!-- footer-->
     <footer class="light-bg">
